fix home-page caption alignment

--- a/artist/delta/assets/main.css
+++ b/artist/delta/assets/main.css
@@ -299,6 +299,10 @@ main {
   width: 600px;
 }
 
+.home-image-two-column > .caption {
+  padding-right: 1rem;
+}
+
 .image-set {
   display: inline-block;
   width: 14.66%;
